force-app/main/default/objects/EdvisorApplication__c/EdvisorApplication__c.object-meta.xml
<CustomObject>
    <label>Edvisor Application</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edvisor Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>