force-app/main/default/objects/EdvisorApplication__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Edvisor Applications</relationshipLabel>
    <relationshipName>Edvisor_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>