force-app/main/default/objects/EdvisorApplication__c/fields/StudentEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>StudentEnrollmentId__c</fullName>
    <externalId>true</externalId>
    <label>Student Enrollment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>