force-app/main/default/objects/EdvisorApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>StudentEnrollmentId__c</columns>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>ProcessingStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>